change submodule to eureka v0.9.3

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -2,9 +2,9 @@ baseURL: /
 title: 燕尘兰若
 
 # Uncomment when not installing with Hugo Modules
-# theme: eureka
+theme: eureka
 # Comment when not installing with Hugo Modules
-theme: wangchucheng.com/hugo-eureka
+# theme: wangchucheng.com/hugo-eureka
 # If you cannot access the Github mirror, you can also use the Gitee mirror: gitee.com/wangchucheng/hugo-eureka
 
 paginate: 10
