--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -2,7 +2,10 @@
  "compilerOptions": {
   "baseUrl": ".",
   "paths": {
-   "*": null
+   "*": [
+    "..\\themes\\eureka\\_vendor\\github.com\\FortAwesome\\Font-Awesome\\js-packages\\@fortawesome\\fontawesome-svg-core\\*",
+    "..\\themes\\eureka\\_vendor\\github.com\\FortAwesome\\Font-Awesome\\js-packages\\@fortawesome\\free-solid-svg-icons\\*"
+   ]
   }
  }
 }
